force-app/main/default/objects/JBCXM__CSEvent__c/JBCXM__CSEvent__c.object-meta.xml
<CustomObject>
    <label>CSEvent</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSEvent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>