force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CompletionDate__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>