force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__IsChild__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChild</label>
    <type>Checkbox</type>
</CustomField>