force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__IsRecurrence__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsRecurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRecurrence</label>
    <type>Checkbox</type>
</CustomField>