force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__RecurrenceDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RecurrenceDayOfMonth__c</fullName>
    <label>RecurrenceDayOfMonth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>