force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__RecurrenceEndDateOnly__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RecurrenceEndDateOnly__c</fullName>
    <label>RecurrenceEndDateOnly</label>
    <type>Date</type>
</CustomField>