force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__RecurrenceEventId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RecurrenceEventId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecurrenceEventId</label>
    <referenceTo>JBCXM__CSEvent__c</referenceTo>
    <relationshipName>CS_Event</relationshipName>
    <type>Lookup</type>
</CustomField>