force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__RecurrenceInstance__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RecurrenceInstance__c</fullName>
    <label>RecurrenceInstance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>