force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__RecurrenceInterval__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RecurrenceInterval__c</fullName>
    <label>RecurrenceInterval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>