force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__RecurrenceStartDateOnly__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RecurrenceStartDateOnly__c</fullName>
    <label>RecurrenceStartDateOnly</label>
    <type>Date</type>
</CustomField>