force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__RecurrenceType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RecurrenceType__c</fullName>
    <label>RecurrenceType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RecursDaily</fullName>
            </value>
            <value>
                <fullName>RecursEveryWeekDay</fullName>
            </value>
            <value>
                <fullName>RecursMonthly</fullName>
            </value>
            <value>
                <fullName>RecursMonthlyNth</fullName>
            </value>
            <value>
                <fullName>RecursWeekly</fullName>
            </value>
            <value>
                <fullName>RecursYearly</fullName>
            </value>
            <value>
                <fullName>RecursYearlyNth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>