force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__TasksCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TasksCount__c</fullName>
    <label>Tasks Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>