force-app/main/default/objects/JBCXM__CSEvent__c/fields/JBCXM__Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Type</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipName>CS_Event</relationshipName>
    <type>Lookup</type>
</CustomField>